Refactoring integration tests for UserController and adding new test scenarios